# patterns

./: CMakeLists.txt  README.md  abstract_factory.cpp  adapter.cpp  bridge.cpp  builder.cpp  chain_of_responsability.cpp  command.cpp  composite.cpp  decorator.cpp  dependency_inversion_principle.cpp  do-build.sh  facade.cpp  factory_method.cpp  flyweight.cpp  interface_segregation_principle.cpp  interpreter.cpp  iterator.cpp  liskov_substitution_principle.cpp  mediator.cpp  momento.cpp  observer.cpp  open_closed_principle.cpp  pimpl.cpp  pimpl.h  pimpl_main.cpp  prototype.cpp  proxy.cpp  single_responsability_principle.cpp  singleton.cpp  state.cpp  strategy.cpp  template_method.cpp  visitor.cpp  visitor_modern.cpp
