project(patters)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(abstract_factory abstract_factory.cpp)
add_executable(builder builder.cpp)
add_executable(factory_method factory_method.cpp)
add_executable(prototype prototype.cpp)
add_executable(singleton singleton.cpp)
add_executable(adapter adapter.cpp)
add_executable(bridge bridge.cpp)
add_executable(composite composite.cpp)
add_executable(decorator decorator.cpp)
add_executable(facade facade.cpp)
add_executable(flyweight flyweight.cpp)
add_executable(proxy proxy.cpp)
add_executable(chain_of_responsability chain_of_responsability.cpp)
add_executable(command command.cpp)
add_executable(interpreter interpreter.cpp)
add_executable(iterator iterator.cpp)